# oil-level-monitor

./: .gitignore  README.md  docker-compose.yml  makefile
.github/workflows/: rust.yml
database/: Dockerfile  README.md  db.changelog.xml  liquibase.properties  makefile  pom.xml
database/tables/: 01_CREATE_distance_table.xml  02_CREATE_distance_history_table.xml
database/tables/sql/: create_distance_history_table.sql  create_distance_table.sql
frontend/: Dockerfile  README.md  makefile  package-lock.json  package.json
frontend/src/: App.js  Home.js  Oil.js  SideBar.js  routes.js
frontend/src/adapter/: Adapter.js  OilLevelAdapter.js
frontend/src/oil/: Oil.css  Oil.js
frontend/src/routes/: routes.js
frontend/src/sidebar/: SideBar.css
oil-level-monitor/: Cargo.toml  makefile
oil-level-monitor/docker/: Dockerfile
oil-level-monitor/src/: distance.rs  logger.rs  main.rs  websocket.rs
oil-level-monitor/src/mapper/: distance_history_mapper.rs  distance_mapper.rs  mod.rs
oil-level-monitor/src/model/: distance.rs  distance_history.rs  mod.rs
oil-level-monitor/src/repository/: connection_string.rs  distance_history_repository.rs  distance_repository.rs  mod.rs
oil-level-sender/: README.md  oil-level-sender.ino
