[package]
name = "oil-level-monitor"
version = "0.1.0"
authors = ["Steven Leadbeater <info@ledsysconsultancy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2"
actix-rt = "1"
actix-cors = "0.2.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.15.2"
futures = "0.3.0"
log = "0.4.8"
chrono = "0.4.0"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["full"] }